Cacti CHANGELOG

HEAD
-feature: Properly support ifHighSpeed
-bug#0002040: ICMP ping errors for Win7 & PHP 5.3
-bug#0002062: Multiple security vunerbilities
-bug#0002063: multiple value poller output incorrectly interpreted as hexadecimal value
-bug#0002064: Removing '~' (tilde) by sanitize_uri() conflicts with Apache UserDir translation
-bug#0002066: Graph without host id Notice: Undefined variable: host_id
-bug#0002067: custom time range filter not working 
-bug#0002071: MySQL table poller_item is dropped always when "Data Input Method" is changed or added.
-bug#0002079: Using input field of a script in graph title doesn't work 
-bug#0002080: Database password containing "@" does not connect
-bug#0002083: When adding a new users, apache generates errors
-bug#0002084: Incorrect normalisation of hrStorageTable values over 2^31
-bug: Update host template cli script help shows incorrect options
-bug: Refresh of Cacti Log Broken wiht 0.8.7h
-bug: Problems saving User Graph Permissions in IE9
-bug: Bandwidth summation fails if NAN values are present
-bug: Special Type Code 'host_id' available in Data Queries by Not Data Input Methods
-bug: Dont generate error messages when creating non host based graphs

0.8.7h
-bug#0001403: Reapply Suggested Names does not work correctly for graphs and data sources not associated with Data Queries
-bug#0001568: Remove PHP 5.3 deprecated functions
-bug#0001584: Conncurrent changes to graph tree ordering can corrupt sort values
-bug#0001626: Symbol ($) does not appear in labels/gprint strings to rrdtool during graph generation
-bug#0001632: Script server treats quoted arguments with spaces incorrectly as multiple separate arguments
-bug#0001646: MySQL SSL connection support
-bug#0001660: Modifying data template values does not proprogate as expected	
-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
-bug#0001768: Perform consistency check on ds maximum vs. ds minimum